Just exit with nonzero to halt.
GH Docs can't be trusted.
https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#using-workflow-commands-to-access-toolkit-functions
Bunch of misleading BS.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
       
       - name: Read bump tag
         run: |
-          echo ((Test-Path ./bump.tag) ? (Get-Content ./bump.tag) : "::setFailed './bump.tag not found'")
+          echo ((Test-Path ./bump.tag) ? (Get-Content ./bump.tag) : (exit 1))
       
       - name: Checkout
         uses: actions/checkout@v3
