--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,20 +22,25 @@ jobs:
     
     steps:
       - name: Debug
-        env:
-          GITHUB_CONTEXT: ${{github}}
-          ENV_CONTEXT: ${{env}}
-          JOB_CONTEXT: ${{job}}
-          STEPS_CONTEXT: ${{steps}}
-          RUNNER_CONTEXT: ${{runner}}
-          INPUTS_CONTEXT: ${{inputs}}
         run: |
-          echo ('"github": ' + $env:GITHUB_CONTEXT)
-          echo ('"env": ' + $env:ENV_CONTEXT)
-          echo ('"job": ' + $env:JOB_CONTEXT)
-          echo ('"steps": ' + $env:STEPS_CONTEXT)
-          echo ('"runner": ' + $env:RUNNER_CONTEXT)
-          echo ('"inputs": ' + $env:INPUTS_CONTEXT)
+          echo ('"github": ' + @'
+          ${{github}}
+          '@
+          echo ('"env": ' + @'
+          ${{env}}
+          '@
+          echo ('"job": ' + @'
+          ${{job}}
+          '@
+          echo ('"steps": ' + @'
+          ${{steps}}
+          '@
+          echo ('"runner": ' + @'
+          ${{runner}}
+          '@
+          echo ('"inputs": ' + @'
+          ${{inputs}}
+          '@
           Get-ChildItem env:
       
       - name: If patch
