--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,53 +21,25 @@ jobs:
     runs-on: ${{matrix.os}}
     
     steps:
-      - name: Debug
-        run: |
-          echo ('"github": ' + @'
-          ${{github}}
-          '@)
-          echo ('"env": ' + @'
-          ${{env}}
-          '@)
-          echo ('"job": ' + @'
-          ${{job}}
-          '@)
-          echo ('"steps": ' + @'
-          ${{steps}}
-          '@)
-          echo ('"runner": ' + @'
-          ${{runner}}
-          '@)
-          echo ('"inputs": ' + @'
-          ${{inputs}}
-          '@)
-          Get-ChildItem env:
-      
-      - name: If patch
-        if: contains(github.event.head_commit.message, '!patch')
-        run: echo 'patch' > ./bump.tag
-      
-      - name: If minor
-        if: contains(github.event.head_commit.message, '!minor')
-        run: echo 'minor' > ./bump.tag
-      
-      - name: If major
-        if: contains(github.event.head_commit.message, '!major')
-        run: echo 'major' > ./bump.tag
-      
-      - name: Read bump tag
-        run: If (Test-Path ./bump.tag) {Get-Content ./bump.tag} Else {Exit(1)}
-      
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          ref: ${{github.base_ref}}
+      
+      - name: Get bump tag
+        run: |
+          Set-Content -Path Env:COMMIT_MESSAGE -Value (git show --pretty=%B)
+          if ((Get-Content -Path Env:COMMIT_MESSAGE) -match '!major') {
+            Set-Content -Path Env:BUMP_TAG -Value 'major'
+          } elseif ((Get-Content -Path Env:COMMIT_MESSAGE) -match '!minor') {
+            Set-Content -Path Env:BUMP_TAG -Value 'minor'
+          } elseif ((Get-Content -Path Env:COMMIT_MESSAGE) -match '!patch') {
+            Set-Content -Path Env:BUMP_TAG -Value 'patch'
+          } else {Exit(1)}
       
       - name: Bump version
         run: |
           cargo install cargo-edit
-          cargo set-version --bump (Get-Content -Path './bump.tag')
-          'v' + (Get-Content -Raw .\cargo.toml | Select-String -Pattern '(?s)\[package\].*?version = "(\d\.\d\.\d)"').Matches.Groups[1].Value > ./bump.tag
+          cargo set-version --bump (Get-Content -Path Env:BUMP_TAG)
+          Set-Content -Path Env:VERSION_STRING -Value ('v' + (Get-Content -Raw .\cargo.toml | Select-String -Pattern '(?s)\[package\].*?version = "(\d\.\d\.\d)"').Matches.Groups[1].Value)
       
       - name: Update
         run: cargo update
@@ -77,16 +49,16 @@ jobs:
       
       - name: Package
         run: |
-          New-Item -ItemType Directory -Path ./artifacts/; 
-          Compress-Archive -Path './target/release/*' -DestinationPath './artifacts/soundsense-rs-' + (Get-Content -Path './version.string') + '-${{runner.os}}.zip'
+          New-Item -ItemType Directory -Path ./artifacts/
+          Compress-Archive -Path './target/release/*' -DestinationPath './artifacts/soundsense-rs-' + (Get-Content -Path Env:VERSION_STRING) + '-${{runner.os}}.zip'
       
       - name: Commit
         run: |
           git add cargo.toml
-          git commit -m ("Automated version bump to " + (Get-Content -Path './version.string'))
+          git commit -m ("Automated version bump to " + (Get-Content -Path Env:VERSION_STRING))
       
       - name: Tag
-        run: git tag (Get-Content -Path './version.string')
+        run: git tag (Get-Content -Path Env:VERSION_STRING)
       
       - name: Push back
         run: git push --tags
