--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,19 +26,20 @@ jobs:
       
       - name: Get bump tag
         run: |
+          [Environment]::SetEnvironmentVariable('COMMIT_MESSAGE', (git show --pretty=%B), [EnvironmentVariableTarget]::Machine)
           if ((Get-Content -Path Env:COMMIT_MESSAGE) -match '!major') {
-            [Environment]::SetEnvironmentVariable('BUMP_TAG, 'major', [EnvironmentVariableTarget]::User)
+            [Environment]::SetEnvironmentVariable('BUMP_TAG', 'major', [EnvironmentVariableTarget]::User)
           } elseif ((Get-Content -Path Env:COMMIT_MESSAGE) -match '!minor') {
-            [Environment]::SetEnvironmentVariable('BUMP_TAG, 'minor', [EnvironmentVariableTarget]::User)
+            [Environment]::SetEnvironmentVariable('BUMP_TAG', 'minor', [EnvironmentVariableTarget]::User)
           } elseif ((Get-Content -Path Env:COMMIT_MESSAGE) -match '!patch') {
-            [Environment]::SetEnvironmentVariable('BUMP_TAG, 'patch', [EnvironmentVariableTarget]::User)
+            [Environment]::SetEnvironmentVariable('BUMP_TAG', 'patch', [EnvironmentVariableTarget]::User)
           } else {Exit(1)}
       
       - name: Bump version
         run: |
           cargo install cargo-edit
           cargo set-version --bump (Get-Content -Path Env:BUMP_TAG)
-          [Environment]::SetEnvironmentVariable('VERSION_STRING, ('v' + (Get-Content -Raw .\cargo.toml | Select-String -Pattern '(?s)\[package\].*?version = "(\d\.\d\.\d)"').Matches.Groups[1].Value), [EnvironmentVariableTarget]::User)
+          [Environment]::SetEnvironmentVariable('VERSION_STRING', ('v' + (Get-Content -Raw .\cargo.toml | Select-String -Pattern '(?s)\[package\].*?version = "(\d\.\d\.\d)"').Matches.Groups[1].Value), [EnvironmentVariableTarget]::User)
       
       - name: Update
         run: cargo update
