--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           $COMMIT_MESSAGE = (git show --no-patch --pretty=%s%n%b)
           $GUID = (New-Guid).Guid
-          Add-Content -Path Env:GITHUB_ENV -Value "COMMIT_MESSAGE<<${$GUID}`n${$COMMIT_MESSAGE}`n${$GUID}"
+          "COMMIT_MESSAGE<<${$GUID}`n${$COMMIT_MESSAGE}`n${$GUID}" >> Env:GITHUB_ENV
           if       ($COMMIT_MESSAGE -match '!major') {
             $BUMP_TAG = 'major'
           } elseif ($COMMIT_MESSAGE -match '!minor') {
@@ -40,13 +40,13 @@ jobs:
           } elseif ($COMMIT_MESSAGE -match '!patch') {
             $BUMP_TAG = 'patch'
           } else {Exit(1)}
-          Add-Content -Path Env:GITHUB_ENV -Value "BUMP_TAG=${$BUMP_TAG}"
+          "BUMP_TAG=${$BUMP_TAG}" >> Env:GITHUB_ENV
       
       - name: Bump version
         run: |
           cargo install cargo-edit
           cargo set-version --bump (Get-Content -Path Env:BUMP_TAG)
-          Add-Content -Path Env:GITHUB_ENV -Value "VERSION_STRING=${'v' + (Get-Content -Raw .\cargo.toml | Select-String -Pattern '(?s)\[package\].*?version = "(\d\.\d\.\d)"').Matches.Groups[1].Value}"
+          "VERSION_STRING=${'v' + (Get-Content -Raw .\cargo.toml | Select-String -Pattern '(?s)\[package\].*?version = "(\d\.\d\.\d)"').Matches.Groups[1].Value}" >> Env:GITHUB_ENV
       
       - name: Update
         run: cargo update
