--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,11 +32,11 @@ jobs:
         run: |
           $COMMIT_MESSAGE = (git show --no-patch --pretty=%s%n%b)
           $GUID = (New-Guid).Guid
-          Append-Content -Path $env:GITHUB_ENV -Value "COMMIT_MESSAGE<<${$GUID}"
+          Add-Content -Path $env:GITHUB_ENV -Value "COMMIT_MESSAGE<<${$GUID}"
           foreach ($line in $COMMIT_MESSAGE) {
-            Append-Content -Path $env:GITHUB_ENV -Value $line
+            Add-Content -Path $env:GITHUB_ENV -Value $line
           }
-          Append-Content -Path $env:GITHUB_ENV -Value $GUID
+          Add-Content -Path $env:GITHUB_ENV -Value $GUID
           if       ($COMMIT_MESSAGE -match '!major') {
             $BUMP_TAG = 'major'
           } elseif ($COMMIT_MESSAGE -match '!minor') {
@@ -44,13 +44,13 @@ jobs:
           } elseif ($COMMIT_MESSAGE -match '!patch') {
             $BUMP_TAG = 'patch'
           } else {Exit(1)}
-          Append-Content -Path $env:GITHUB_ENV -Value "BUMP_TAG=${$BUMP_TAG}"
+          Add-Content -Path $env:GITHUB_ENV -Value "BUMP_TAG=${$BUMP_TAG}"
       
       - name: Bump version
         run: |
           cargo install cargo-edit
           cargo set-version --bump $env:BUMP_TAG
-          Append-Content -Path $env:GITHUB_ENV -Value "VERSION_STRING=${'v' + (Get-Content -Raw .\cargo.toml | Select-String -Pattern '(?s)\[package\].*?version = "(\d\.\d\.\d)"').Matches.Groups[1].Value}"
+          Add-Content -Path $env:GITHUB_ENV -Value "VERSION_STRING=${'v' + (Get-Content -Raw .\cargo.toml | Select-String -Pattern '(?s)\[package\].*?version = "(\d\.\d\.\d)"').Matches.Groups[1].Value}"
       
       - name: Update
         run: cargo update
