--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           $COMMIT_MESSAGE = (git show --no-patch --pretty=%s%n%b)
           $GUID = (New-Guid).Guid
-          Add-Content -Path $env:GITHUB_ENV -Value "COMMIT_MESSAGE<<${$GUID}"
+          Add-Content -Path $env:GITHUB_ENV -Value "COMMIT_MESSAGE<<${GUID}"
           foreach ($line in $COMMIT_MESSAGE) {
             Add-Content -Path $env:GITHUB_ENV -Value $line
           }
@@ -44,13 +44,14 @@ jobs:
           } elseif ($COMMIT_MESSAGE -match '!patch') {
             $BUMP_TAG = 'patch'
           } else {Exit(1)}
-          Add-Content -Path $env:GITHUB_ENV -Value "BUMP_TAG=${$BUMP_TAG}"
+          Add-Content -Path $env:GITHUB_ENV -Value "BUMP_TAG=${BUMP_TAG}"
       
       - name: Bump version
         run: |
           cargo install cargo-edit
           cargo set-version --bump $env:BUMP_TAG
-          Add-Content -Path $env:GITHUB_ENV -Value "VERSION_STRING=${'v' + (Get-Content -Raw .\cargo.toml | Select-String -Pattern '(?s)\[package\].*?version = "(\d\.\d\.\d)"').Matches.Groups[1].Value}"
+          $PATTERN = '(?s)\[package\].*?version = "(\d\.\d\.\d)"'
+          Add-Content -Path $env:GITHUB_ENV -Value 'VERSION_STRING=' + 'v$((Get-Content -Raw .\cargo.toml | Select-String -Pattern ${PATTERN}).Matches.Groups[1].Value)'
       
       - name: Update
         run: cargo update
