Capitalize in staging too.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,6 @@ jobs:
     runs-on: ${{matrix.os}}
     
     steps:
-      - name: Debug1
-        run: Test-Path Cargo.toml
-      
       - name: Checkout
         uses: actions/checkout@v3
       
@@ -49,15 +46,12 @@ jobs:
           } else {Exit(1)}
           Add-Content -Path $env:GITHUB_ENV -Value "BUMP_TAG=${BUMP_TAG}"
       
-      - name: Debug2
-        run: Test-Path Cargo.toml
-      
       - name: Bump version
         run: |
           cargo install cargo-edit
           cargo set-version --bump $env:BUMP_TAG
           $PATTERN = '(?s)\[package\].*?version = "(\d\.\d\.\d)"'
-          Add-Content -Path $env:GITHUB_ENV -Value ('VERSION_STRING=' + "v$((Get-Content -Raw -Path Cargo.toml | Select-String -Pattern ${PATTERN}).Matches.Groups[1].Value)")
+          Add-Content -Path $env:GITHUB_ENV -Value ('VERSION_STRING=' + "v$((Get-Content -Raw -Path ./Cargo.toml | Select-String -Pattern ${PATTERN}).Matches.Groups[1].Value)")
       
       - name: Install Linux dependencies
         if: runner.os == 'Linux'
@@ -78,7 +72,7 @@ jobs:
       
       - name: Commit
         run: |
-          git add cargo.toml
+          git add Cargo.toml
           git commit -m ("Automated version bump to " + $env:VERSION_STRING)
       
       - name: Tag
