Specified the tag name for release to target.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,5 +85,6 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./artifacts/*
+          tag_name: ${{env.BUMP_TAG}}
           body: ${{env.COMMIT_MESSAGE}}
+          files: ./artifacts/*
