--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 # ToDo:
 #   https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions?tool=powershell#setting-an-output-parameter
 #   https://github.com/wraithan/cargo-bump
+#   Split builders.
 
 name: Release a new version
 
@@ -76,15 +77,18 @@ jobs:
           git config --global user.name "A GitHub Workflow Runner"
           git commit -m ("Automated version bump to " + $env:VERSION_STRING)
       
+      - name: Push commit
+        run: git push
+        
       - name: Tag
         run: git tag $env:VERSION_STRING
       
-      - name: Push back
-        run: git push --tags
+      - name: Push tag
+        run: git push $env:VERSION_STRING
       
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{env.BUMP_TAG}}
+          tag_name: ${{env.VERSION_STRING}}
           body: ${{env.COMMIT_MESSAGE}}
           files: ./artifacts/*
