--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,14 +73,15 @@ jobs:
       
       - name: Package
         run: |
+          $EXTENSION = (${{runner.os}} -eq 'Windows') ? '.exe' : ''
           New-Item -ItemType Directory -Path ./artifacts/; 
-          Compress-Archive -Path './target/release/*' -DestinationPath ('./artifacts/soundsense-rs-' + $env:VERSION_STRING + '-${{runner.os}}.zip')
+          Compress-Archive -Path "./target/release/soundsense-rs${EXTENSION}" -DestinationPath ("./artifacts/soundsense-rs-${env:VERSION_STRING}-${{runner.os}}.zip")
       
       - name: Commit
         if: runner.os == 'Linux'
         run: |
           git add Cargo.toml
-          git commit -m ("Automated version bump to " + $env:VERSION_STRING)
+          git commit -m ("Automated version bump to ${env:VERSION_STRING}")
       
       - name: Push commit
         if: runner.os == 'Linux'
