!patch Just triggering a build.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 /.vscode
 /target
+/artifacts
 **/*.rs.bk
 /soundpack
 /soundpack_modified
 /soundpack.zip
 /soundpack_tmp
 /ignore.txt
-/target/**
-/artifacts/**
